files paths changed, several improvements added